Added the C2s API
