# siade/app/controllers/api_particulier/v2/cnaf/complementaire_sante_solidaire_controller.rb
@@ -1,18 +1,11 @@
-class APIParticulier::V2::CNAF::ComplementaireSanteSolidaireController < APIParticulier::MockedController
+class APIParticulier::V2::CNAF::ComplementaireSanteSolidaireController < APIParticulier::V2::AbstractCNAFController
   protected
-
-  def mocking_params
-    {
-      codePaysLieuDeNaissance: params[:codePaysLieuDeNaissance],
-      sexe: params[:sexe],
-      nomUsage: params[:nomUsage],
-      prenoms: params[:prenoms],
-      anneeDateDeNaissance: params[:anneeDateDeNaissance],
-      moisDateDeNaissance: params[:moisDateDeNaissance]
-    }.compact
-  end
 
   def operation_id
     'api_particulier_v2_cnaf_complementaire_sante_solidaire'
+  end
+
+  def retriever
+    ::CNAF::ComplementaireSanteSolidaire
   end
 end
