# siade/app/serializers/api_particulier/cnaf/complementaire_sante_solidaire/v2.rb
@@ -1,0 +1,9 @@
+class APIParticulier::CNAF::ComplementaireSanteSolidaire::V2 < APIParticulier::V2BaseSerializer
+  %i[
+    status
+    dateDebut
+    dateFin
+  ].each do |resource_attribute|
+    attribute resource_attribute, if: -> { scope?(:complementaire_sante_solidaire) }
+  end
+end
